<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Idealnaya rabota LLC
  ~ Licensed under Multy.io license.
  ~ See LICENSE for details -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/button_create"
        style="@style/MainCardClickable"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/FirstActionsLabel"
            android:drawableStart="@drawable/ic_wallet_create_new_bigger"
            android:text="@string/create_first_wallet" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_restore"
        style="@style/MainCardClickable"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_create">

        <TextView
            style="@style/FirstActionsLabel"
            android:drawableStart="@drawable/ic_restore_multy"
            android:text="@string/restore_multy" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/button_metamask"
        style="@style/MainCardClickable"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_restore">

        <TextView
            style="@style/FirstActionsLabel"
            android:drawableStart="@drawable/ic_metamask_small"
            android:text="@string/import_meta_mask" />
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>