<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Idealnaya rabota LLC
  ~ Licensed under Multy.io license.
  ~ See LICENSE for details
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:clickable="true"
    android:clipToPadding="false"
    android:focusable="true"
    tools:showIn="io.multy.android.AssetSendActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/input_address"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/input_address_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/shape_squircle_white"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
        android:elevation="11dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/hint_search_or_enter_address"
        android:inputType="textNoSuggestions"
        android:maxLines="@integer/two"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textColor="@color/text_main"
        android:textColorHint="@color/text_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        android:background="@drawable/shape_bottom_round_main"
        android:elevation="@dimen/base_view_elevation"
        app:layout_constraintBottom_toBottomOf="@+id/button_address"
        app:layout_constraintLeft_toLeftOf="@+id/button_address"
        app:layout_constraintRight_toRightOf="@+id/button_scan_qr"
        app:layout_constraintTop_toTopOf="@+id/button_address" />

    <TextView
        android:id="@+id/button_address"
        style="@style/SendShareButton"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/ic_donation_icon_smallest"
        android:gravity="top|center_horizontal"
        android:paddingTop="18dp"
        android:text="@string/contacts_bottombar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_scan_wireless"
        app:layout_constraintTop_toBottomOf="@id/input_address" />

    <TextView
        android:id="@+id/text_contacts_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/base_view_elevation"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:text="@string/work_in_progress"
        android:textColor="@color/red_warn"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/button_address"
        app:layout_constraintEnd_toEndOf="@id/button_address"
        app:layout_constraintStart_toStartOf="@id/button_address" />

    <TextView
        android:id="@+id/button_scan_wireless"
        style="@style/SendShareButton"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/ic_donation_icon_smallest"
        android:paddingTop="18dp"
        android:text="@string/wireless_scan"
        app:layout_constraintLeft_toRightOf="@+id/button_address"
        app:layout_constraintRight_toLeftOf="@+id/button_scan_qr"
        app:layout_constraintTop_toBottomOf="@id/input_address" />

    <TextView
        android:id="@+id/text_wireless_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/base_view_elevation"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:text="@string/work_in_progress"
        android:textColor="@color/red_warn"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/button_scan_wireless"
        app:layout_constraintEnd_toEndOf="@id/button_scan_wireless"
        app:layout_constraintStart_toStartOf="@id/button_scan_wireless" />

    <TextView
        android:id="@+id/button_scan_qr"
        style="@style/SendShareButton"
        android:drawablePadding="8dp"
        android:drawableTop="@drawable/ic_qr"
        android:paddingTop="20dp"
        android:text="@string/scan_qr"
        app:layout_constraintLeft_toRightOf="@+id/button_scan_wireless"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_address" />

    <View
        android:id="@+id/footer_background"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        android:layout_marginTop="@dimen/margin_35dp"
        android:background="@drawable/shape_squircle_white"
        android:elevation="@dimen/base_view_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_address" />

    <TextView
        android:id="@+id/text_recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:elevation="@dimen/base_view_elevation"
        android:text="@string/recent_addresses"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/text_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/footer_background" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:elevation="@dimen/base_view_elevation"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_recent" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_next"
        app:layout_constraintTop_toBottomOf="@id/recycler_view" />

    <TextView
        android:id="@+id/button_next"
        style="@style/ButtonNext"
        android:background="@color/disabled"
        android:elevation="@dimen/base_view_elevation"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>